--- a/WebTrivialWiki/app/scripts/directives/header/headerMenu.tmpl.html
+++ b/WebTrivialWiki/app/scripts/directives/header/headerMenu.tmpl.html
@@ -81,6 +81,7 @@
                 <ul class="dropdown-menu admin-dropdown">
                     <li class="small-margin-top"><a href="#/manageUsers">Manage users</a></li>
                     <li class="small-margin-top"><a href="#/manageQuestions">Manage questions</a></li>
+                    <li class="small-margin-top"><a href="#/manageTopics">Manage topics</a></li>
                 </ul>
             </li>
             <li class="hvr-underline-from-center small-padding-bottom">
