--- a/WebTrivialWiki/app/index.html
+++ b/WebTrivialWiki/app/index.html
@@ -104,6 +104,7 @@
     <script src="scripts/directives/header/headerService.js"></script>
     <script src="scripts/directives/header/headerDirective.js"></script>
     <script src="scripts/directives/header/headerController.js"></script>
+    <script src="scripts/directives/customHeight.js"></script>
     <script src="scripts/Admin/ManageUsers/manageUsersController.js"></script>
     <script src="scripts/Admin/ManageUsers/manageUsersService.js"></script>
     <script src="scripts/Admin/ManageUsers/Modals/confirmDeleteController.js"></script>
