--- a/WebTrivialWiki/app/scripts/Topics/proposeTopic.html
+++ b/WebTrivialWiki/app/scripts/Topics/proposeTopic.html
@@ -8,7 +8,7 @@
                     <input ng-model="proposedTopic" class="montserratFont">
                 </md-input-container>
                 <span class="red-color proposeTopic-error" ng-show="topicIsInvalid">The topic must have at most 20 characters.</span>
-                <div class="spinner medium-margin-bottom" ng-show="topicIsSaving"></div>
+                <div class="spinner proposeTopic-spinner" ng-show="topicIsSaving"></div>
             </div>
         </md-dialog-content>
         <md-dialog-actions layout="row">
