--- a/WebTrivialWiki/app/scripts/Topics/topics.tmpl.html
+++ b/WebTrivialWiki/app/scripts/Topics/topics.tmpl.html
@@ -16,12 +16,12 @@
 </md-content>
 
 <div layout="row" style="position: absolute; height: 100%; width: 100%; margin-top: 90px;">
-    <div flex="15"></div>
-    <div flex="70">
-        <div class="md-padding medium-margin-top" layout-xs="column" layout-align="center" layout="row">
-            <md-card  style="width: 280px;" ng-repeat="topic in topics">
+    <div flex="5"></div>
+    <div flex="95">
+        <div class="md-padding medium-margin-top" layout-xs="column" layout-wrap layout="row">
+            <md-card  style="width: 280px;" ng-repeat="topic in topics" layout-wrap>
                 <img ng-src="{{topic.thumbnailUrl}}" class="md-card-image" alt="Washed Out">
-                <md-card-actions layout="row" layout-align="center">
+                <md-card-actions layout="row" >
                     <span class="montserratFont" style="float: left; font-size: 15px; align-self: center;">{{topic.topicName}}</span>
                     <div flex></div>
                     <md-button class="md-icon-button" aria-label="Favorite">
