Started to work on the friends module

--- a/WebTrivialWiki/app/index.html
+++ b/WebTrivialWiki/app/index.html
@@ -43,7 +43,7 @@
         <header-menu on-scroll></header-menu>
     </div>
 
-    <div style="width: 100% !important;">
+    <div style="width: 100% !important; background-color: #ededed;">
         <div class="views" ng-view=""></div>
     </div>
 
@@ -118,6 +118,7 @@
     <script src="scripts/User/Settings/settingsController.js"></script>
     <script src="scripts/Trivia/signalRFactory.js"></script>
     <script src="scripts/Trivia/Game/triviaService.js"></script>
+    <script src="scripts/Trivia/Game/triviaTableController.js"></script>
     <script src="scripts/User/Avatar/changeAvatarController.js"></script>
     <script src="scripts/User/Avatar/changeAvatarService.js"></script>
     <script src="scripts/User/Settings/changePasswordController.js"></script>
