--- a/WebTrivialWiki/app/scripts/Trivia/Game/trivia.html
+++ b/WebTrivialWiki/app/scripts/Trivia/Game/trivia.html
@@ -1,64 +1,49 @@
-﻿<div class="trivia-container">
-    <div class="chat-container">
-        <div>
-            <div class="trivia-chat">
-                <div class="chat-messages" scroll-glue>
-                    <div class="chat-message">
-                        <div class="small-margin-top" title="Loading.." ng-show="messagesAreLoading">
-                            <div class="loader"><div class="loader-inner ball-clip-rotate"><div class="no-margin-top"></div></div></div>
-                        </div>
-                    </div>
-                    <div class="chat-message" ng-repeat="message in messages| reverse">
-                        <div class="media nice-border-bottom">
-                            <div class="media-left">
-                                <a href="javascript(0)" class="default-cursor">
-                                    <!--<img class="media-object" ng-src="http://localhost:4605/chatAvatar/{{message.userName}}">-->
-                                    <img class="chat-avatar" ng-src="http://localhost:4605/chatAvatar/{{message.userName}}"/>
-                                </a>
-                            </div>
-                            <div class="media-body">
-                                <span class="media-body chat-username">{{message.userName}}</span>
-                                <p class="user-message">{{message.message}}</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group sent-message-input">
-                <div class="input-group input-group-sm">
-                    <div class="icon-addon addon-md">
-                        <input type="text" placeholder="Send message" ng-model="messageToSend" class="form-control chat-input">
-                    </div>
-                    <span class="input-group-btn send-message-container">
-                        <button class="btn btn-default send-message-button no-border" type="button" ng-click="sendMessage();" title="Send message">
-                            <i class="fa fa-send send-message-gliphy"></i>
-                        </button>
-                    </span>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+﻿<div layout="row" style="position: absolute; height: 100%; width: 100%; background-color: #ededed">
+    <div flex="80" class="panel-shadow montserratFont" style="position: relative; margin-top: 75px; margin-bottom: 20px; margin-left: 20px;">
+        <div ng-repeat="table in tables" layout-xs="column" layout-wrap layout="row" style="position: absolute;">
+            <md-card class="public-table" md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch style="">
+                <md-card-title>
+                    <md-card-title-text style="z-index: 1;">
+                        <span class="md-headline">{{table.tableName}}</span>
+                        <span class="md-subhead"> Topics: </span>
+                        <span class="md-subhead small-margin-left" ng-repeat="topic in table.topics">{{topic}}</span>
+                    </md-card-title-text>
 
-<div class="nonStopTrivia" style="font-family: Montserrat;">
-    <div class="triviaQuestions" style="" scroll-glue>
-        <div ng-repeat="question in triviaQuestions" class="small-margin-left">
-            <span style="font-weight: 500; font-size: 18px;" ng-class="{'red-color': senderIsTriviaBot(question) }">{{question.Sender}}:</span>
-            <span style="font-weight: 300; font-size: 16px;">{{question.MessageText}}</span>
+                    <md-card-title-media style="width: 37%;">
+                        <div class="md-media-sm card-media" style="width: 100%; height: 100%;">
+                            <img src="../../../images/know-it-all.png"/>
+                        </div>
+                    </md-card-title-media>
+                </md-card-title>
+                <md-card-actions layout="row" layout-align="end center">
+                    <span class="small-margin-left" style="font-size: 10px; font-weight: 300;">dsada</span>
+                    <div flex></div>
+                    <md-button ng-click="joinTable(table)">Join</md-button>
+                </md-card-actions>
+            </md-card>
+        </div>
+
+
+        <md-button class="md-fab proposeTopic-button hvr-grow-shadow" aria-label="Eat cake" style="position: absolute; bottom: 20px; right: 20px;">
+            <md-icon md-svg-src="../images/icons/plus.svg"></md-icon>
+            <md-tooltip class="mark-read-tooltip tooltip-margin-top" md-visible="false" md-direction="bottom">
+                Create new table
+            </md-tooltip>
+        </md-button>
+    </div>
+
+    <div flex="20" class="panel-shadow montserratFont" style="margin-top: 75px; margin-bottom: 20px; margin-left: 20px; right: 0;" layout-align="center">
+        <div class="small-margin-top small-margin-left">
+            <span style="color: #ccc;">Online friends</span>
+        </div>
+        <md-divider class="small-margin-top"></md-divider>
+        <div class="small-margin-left small-margin-right" style="text-align: center; margin-top: 20px;">
+            <span style="font-size: 17px; font-weight: 300; display: block;">Your account doesn't have any connections yet</span>
+            <span class="small-margin-top" style="font-size: 13px; font-weight: 300; display: block;">You can invite someone from the main page</span>
+            <button class="btn btn-success hvr-grow-shadow" style="border-radius: 0; margin-top: 20px; height: 40px;"> Make some new friends</button>
         </div>
     </div>
-    <div style="position: absolute; bottom: 0; border-top: 1px solid #ccc; height: 12%">
-        <div class="form-group sent-message-input">
-            <div class="input-group input-group-sm">
-                <div class="icon-addon addon-md">
-                    <input type="text" placeholder="Answer" ng-model="responseToSend" ng-keydown="$event.which === 13 && sendAnswer()" class="form-control chat-input">
-                </div>
-                <span class="input-group-btn send-message-container">
-                    <button class="btn btn-default" type="button" ng-click="sendAnswer()" title="Answer" style="margin-top: 4px; margin-left: 5px;">
-                        Send
-                    </button>
-                </span>
-            </div>
-        </div>
-    </div>
+
+
+
 </div>
