--- a/WebTrivialWiki/app/scripts/User/Settings/settings.html
+++ b/WebTrivialWiki/app/scripts/User/Settings/settings.html
@@ -54,7 +54,7 @@
         <div class="row">
             <div class="box col-lg-4 col-md-4 col-sm-5 col-xs-6" ng-click="triggerUpload()">
                 <!--<img ng-show="!userHasAvatar()" src="../../../images/default_avatar.png" ng-click="triggerUpload()"/>-->
-                <img src="http://localhost:4605/avatar/{{userName}}" alt="Profile pic"/>
+                <img ng-src="http://localhost:4605/avatar/{{userName}}" alt="Profile pic"/>
                 <span class="caption simple-caption">
                     <p>Change avatar</p>
                 </span>
