--- a/WebTrivialWiki/app/scripts/directives/header/headerMenu.tmpl.html
+++ b/WebTrivialWiki/app/scripts/directives/header/headerMenu.tmpl.html
@@ -96,7 +96,7 @@
                 <a class="dropdown-toggle headerUsername" data-toggle="dropdown">{{userName}}</a>
                 <ul class="dropdown-menu dropdown-menu-right settings-dropdown">
                     <li class="default-cursor small-margin-top" ng-click="javascript(0);">
-                        <img ng-show="!userHasAvatar()" src="http://localhost:4605/avatar/{{userName}}"/>
+                        <img ng-show="!userHasAvatar()" ng-src="http://localhost:4605/avatar/{{userName}}"/>
 
                     </li>
                     <li class="default-cursor small-margin-top">
