--- a/WebTrivialWiki/app/index.html
+++ b/WebTrivialWiki/app/index.html
@@ -126,5 +126,6 @@
     <script src="scripts/Topics/topicsController.js"></script>
     <script src="scripts/Topics/topicsService.js"></script>
     <script src="scripts/Topics/proposeTopicController.js"></script>
+    <script src="scripts/directives/popoverTrigger.js"></script>
 </body>
 </html>
