--- a/WebTrivialWiki/app/scripts/User/SignUp/signUpModal.tmpl.html
+++ b/WebTrivialWiki/app/scripts/User/SignUp/signUpModal.tmpl.html
@@ -8,8 +8,8 @@
         <input id="email" type="email" placeholder="Email" ng-model="email" />
 
         <button title="Login" ng-click="registerNewAccount()">Register</button>
-        <div id="facebookLink">
-            <i class="fa fa-facebook" title="Register with facebook" ng-click=""></i>
-        </div>
+        <div class="spinner logging-spinner" ng-show="accountIsSaving"></div>
+
+        
     </div>
 </div>
