--- a/WebTrivialWiki/app/index.html
+++ b/WebTrivialWiki/app/index.html
@@ -119,6 +119,7 @@
     <script src="scripts/Trivia/signalRFactory.js"></script>
     <script src="scripts/Trivia/Game/triviaService.js"></script>
     <script src="scripts/Trivia/Game/triviaTableController.js"></script>
+    <script src="scripts/Trivia/Game/createTableController.js"></script>
     <script src="scripts/User/Avatar/changeAvatarController.js"></script>
     <script src="scripts/User/Avatar/changeAvatarService.js"></script>
     <script src="scripts/User/Settings/changePasswordController.js"></script>
@@ -127,5 +128,6 @@
     <script src="scripts/Topics/topicsService.js"></script>
     <script src="scripts/Topics/proposeTopicController.js"></script>
     <script src="scripts/directives/popoverTrigger.js"></script>
+    <script src="scripts/Trivia/Game/addFriendController.js"></script>
 </body>
 </html>
