--- a/WebTrivialWiki/app/scripts/directives/header/headerMenu.tmpl.html
+++ b/WebTrivialWiki/app/scripts/directives/header/headerMenu.tmpl.html
@@ -1,61 +1,4 @@
-﻿<!--<div class="header headerContainer">
-    <div class="wikiLogo">
-        <img class="wiki-logo-image" src="images/wikipedia-icon2.png" ng-click="javascript(0);"/>
-        <span class="wikiTitle" ng-click="goToHomePage()">WikiTrivia</span>
-        
-        <ul class="navigation-bar">
-            <li class="hvr-underline-from-center small-padding-bottom">
-                <a class="sliding-middle-out" ng-click="openLoginModal()" ng-show="!userIsLoggedIn">Login</a>
-            </li>
-            <li class="hvr-underline-from-center small-padding-bottom">
-                <a ng-click="openTrivia()">QuizTriv</a>
-            </li>
-            <li class="hvr-underline-from-center small-padding-bottom">
-                <a ng-show="userIsLoggedIn" ng-click="openLeaderboards()">Leaderboards</a>
-            </li>
-            <li class="hvr-underline-from-center small-padding-bottom" ng-show="userRole === 'Admin'">
-                <a ng-click="openUserManagement()">Manage users</a>
-            </li>
-            <li class="hvr-underline-from-center small-padding-bottom">
-                <a ng-click="openRegisterModal()" ng-show="!userIsLoggedIn">Register</a>
-            </li>
-
-            <li class="hvr-underline-from-center small-padding-bottom small-margin-right" ng-hide="userRole === 'Admin'">
-                <a>Contact</a>
-            </li>
-            <li class="small-padding-bottom user-settings" ng-show="userIsLoggedIn">
-                <img ng-show="!userHasAvatar()" ng-src="http://localhost:4605/avatar/{{userName}}"/>
-                <a class="dropdown-toggle" data-toggle="dropdown">{{userName}}</a>
-                <ul class="dropdown-menu dropdown-menu-right settings-dropdown">
-                    <li class="default-cursor small-margin-top" ng-click="javascript(0);">
-                        <img ng-show="!userHasAvatar()" src="http://localhost:4605/avatar/{{userName}}"/>
-
-                    </li>
-                    <li class="default-cursor small-margin-top">
-                        <span class="default-cursor">{{userName}}  - {{rank}}
-                            <span ng-if="rank === 1">st position</span>
-                            <span ng-if="rank === 2">nd position</span>
-                            <span ng-if="rank === 3">rd position</span>
-                            <span ng-if="rank > 3">th position</span>
-                        </span>
-                    </li>
-                    <li class="divider"></li>
-                    <li class="profile-buttons medium-margin-bottom">
-                        <button class="btn btn-default pull-left" ng-click="goToSettings()">Settings</button>
-                        <button class="btn btn-default pull-right" ng-click="signOut()">Sign out</button>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-        <button type="button" ng-click="isCollapsed = !isCollapsed">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar" ></span>
-            <span class="icon-bar" ></span>
-            <span class="icon-bar"></span>
-        </button>
-    </div>
-</div>-->
-
+﻿
 <div class="header headerContainer" layout="column" style="position: fixed; width: 100%; z-index: 1000;">
     <md-toolbar layout="row" class="wikiLogo">
         <div class="logo-container">
@@ -71,9 +14,6 @@
                 <a ng-click="openTrivia()">QuizTriv</a>
             </li>
             <li class="hvr-underline-from-center small-padding-bottom" ng-show="userIsLoggedIn">
-                <a ng-show="userIsLoggedIn" ng-click="openLeaderboards()">Leaderboards</a>
-            </li>
-            <li class="hvr-underline-from-center small-padding-bottom" ng-show="userIsLoggedIn">
                 <a ng-click="openTopics()">Topics</a>
             </li>
             <li class="hvr-underline-from-center small-padding-bottom" ng-show="userRole === 'Admin'">
@@ -84,8 +24,8 @@
                     <li class="small-margin-top"><a href="#/manageTopics">Manage topics</a></li>
                 </ul>
             </li>
-            <li class="hvr-underline-from-center small-padding-bottom">
-                <a ng-click="openRegisterModal()" ng-show="!userIsLoggedIn">Register</a>
+            <li class="hvr-underline-from-center small-padding-bottom" ng-show="!userIsLoggedIn">
+                <a ng-click="openRegisterModal()">Register</a>
             </li>
 
             <li class="hvr-underline-from-center small-padding-bottom small-margin-right" ng-hide="userRole === 'Admin' || !userIsLoggedIn">
@@ -183,9 +123,6 @@
                     <div flex-gt-sm="66" flex="33">
                         <img src="../../../images/icons/chart.png"/>
                     </div>
-                </div>
-                <div layout="column">
-                    <a class="slider-menu-item" ng-click="openLeaderboards()">Leaderboards</a>
                 </div>
             </div>
             <div layout="row" class="slider-menu-row">
